Make desktop uploader parse and ingest saves
